--- a/tutorial/retrospectives/2016-07-30/beginner-y0chan.yaml
+++ b/tutorial/retrospectives/2016-07-30/beginner-y0chan.yaml
@@ -3,29 +3,37 @@ questions:
   # 参加した理由
   motivation: |
     どうしてこのワークショップに参加しようと思いましたか？
+    OSS開発って具体的にどのようなことをしているのかを知りたかったから。
+
     どうしてOSSの開発に参加したいと思っていますか？
     みんなのためとか世界のためとかでもよいですが、
     個人的な理由でもまったく問題ありません。
     自分の思っていることを大事にしたいのです。
     アイスブレイクのときに話した内容でもよいですし、
     そのあとに気持ちが変わったらなら変わった気持ちでよいです。
+    とにかく新しくておもしろいそうなことをやってみたかったからです。あとは世界のためです。
+    
   # 見つけた場所
   via: |
     どこでこのワークショップを知りましたか？
+    doorkeeper
+    
   # 開発対象
   target: |
     ワークショップで開発対象に選んだOSSはなんですか？
+    cocoa(macvim)
+    
   # 満足度
   satisfaction-rating:
     # ↓のうち当てはまるものを1つ選んでコメントを外してください。
     #すごく満足した
-    #満足した
+    満足した
     #不満だった
     #すごく不満だった
   # 想定との違い
   difference:
     # ↓のうち当てはまるものを1つ選んでコメントを外してください。
-    #想定より充実していた
+    想定より充実していた
     #想定通りだった
     #期待はずれだった
     #すごく期待はずれだった
@@ -35,8 +43,9 @@ questions:
     #機会を作って積極的に開発に参加するし、まわりの人が開発に参加することも手伝う
     #機会を作って積極的に開発に参加する
     #機会があれば開発に参加する
-    #機会があったら開発に参加したい（けどできなそう）
+    機会があったら開発に参加したい（けどできなそう）
     #機会があっても開発に参加しない
   # その他
   etc: |
     なにか思ったことがあれば自由に書いてください。
+    OSSのバグを直したり、新しい機能を開発する人達のレベルにどうやった成れたらいーなと思いました。
